--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
     sdk: flutter
   material_design_icons_flutter: ^7.0.7296
   persistent_bottom_nav_bar: ^5.0.0
+  url_launcher: ^6.0.13
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
