--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
   material_design_icons_flutter: ^7.0.7296
   persistent_bottom_nav_bar: ^5.0.0
   url_launcher: ^6.0.13
+  http: ^0.13.3
+  html: ^0.15.4
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -91,3 +93,4 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+
